fixed the order and orderItem issue